feat(appointment): walking appointment
